// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core/layout/SideNavEntry renders correctly with link 1`] = `
<a
  href="/test"
  onClick={[Function]}
>
  <li
    className="MuiListItem-root MuiListItem-gutters"
    css={
      Array [
        Object {
          "map": undefined,
          "name": "1fef3mw",
          "next": undefined,
          "styles": "
  
  color: #b0bec5;
;;
  border-left: 3px solid transparent;
  cursor: pointer;

  &:hover {
    border-left: 3px solid #ff9800;
  }
",
          "toString": [Function],
        },
        undefined,
      ]
    }
    disabled={false}
  >
    <div
      className="MuiListItemIcon-root"
      css={
        Object {
          "map": undefined,
          "name": "2tnp70",
          "next": undefined,
          "styles": "
  color: #b0bec5;
",
          "toString": [Function],
        }
      }
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="MuiListItemText-root"
      css={
        Object {
          "map": undefined,
          "name": "2tnp70",
          "next": undefined,
          "styles": "
  color: #b0bec5;
",
          "toString": [Function],
        }
      }
    >
      Test
    </div>
  </li>
</a>
`;

exports[`core/layout/SideNavEntry renders correctly without link 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters"
  css={
    Array [
      Object {
        "map": undefined,
        "name": "1fef3mw",
        "next": undefined,
        "styles": "
  
  color: #b0bec5;
;;
  border-left: 3px solid transparent;
  cursor: pointer;

  &:hover {
    border-left: 3px solid #ff9800;
  }
",
        "toString": [Function],
      },
      undefined,
    ]
  }
  disabled={false}
>
  <div
    className="MuiListItemIcon-root"
    css={
      Object {
        "map": undefined,
        "name": "2tnp70",
        "next": undefined,
        "styles": "
  color: #b0bec5;
",
        "toString": [Function],
      }
    }
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    />
  </div>
  <div
    className="MuiListItemText-root"
    css={
      Object {
        "map": undefined,
        "name": "2tnp70",
        "next": undefined,
        "styles": "
  color: #b0bec5;
",
        "toString": [Function],
      }
    }
  >
    Test
  </div>
</li>
`;
